--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,5 +1,5 @@
 ﻿<!-- main app container -->
-<div class="jumbotron">
+<div class="bodyLayout">
     <div class="container">
         <div class="col-sm-8 col-sm-offset-2">
             <alert></alert>
@@ -11,9 +11,9 @@
 <!-- credits -->
 <div class="text-center">
     <p>
-        <a href="http://jasonwatmore.com/post/2016/09/29/angular-2-user-registration-and-login-example-tutorial" target="_top">Angular 2 User Registration and Login Example & Tutorial</a>
+        <a href="" target="_top">Customer Relation Management</a>
     </p>
     <p>
-        <a href="http://jasonwatmore.com" target="_top">JasonWatmore.com</a>
+        <a href="" target="_top">beta 0.0.1</a>
     </p>
 </div>
